3.1.1c.11072011 release